fix: image distortion and remove hyphen from  sms pricing

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -152,8 +152,7 @@ nav {
   .product-img{
     img{
       max-width: 270px;
-      width: 100%;
-      height: fit-content;
+      width: 100%;      
       margin-right: -24px;
     }
   }  
